--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas obcaecati, cumque deserunt quia necessitatibus reprehenderit a facere ea delectus dignissimos officiis architecto consequatur, incidunt, doloremque tenetur veritatis sed temporibus eum?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe ducimus praesentium ipsa mollitia error, consequatur fugiat earum vero voluptatum adipisci ullam libero officia numquam iusto deleniti expedita labore nisi quisquam.</p>
         </article>
     </main>
 </body>
