--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso em Vídeo</title>
     <link rel="stylesheet" href="estilos/style.css">
@@ -21,7 +20,7 @@
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
             <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
